fix(performance): fixed cumulative layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,9 @@
 @font-face {
     font-family: "Inter";
     font-weight: 100 900;
-    font-display: swap;
+    font-display: optional;
     font-style: normal;
-    src: url("/fonts/Inter-roman.var.woff2?v=3.15") format("woff2");
+    src: url("/fonts/inter.woff2") format("woff2");
 }
 
 @layer base {
